--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r118/three.module.min.js"></script>
+    <script src="./assets/js/tree.js"></script>
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
