--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <canvas id="renderCanvas"></canvas>
-    <script src="./assets/js/tree.js"></script>
-    <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/app.js" type="module"></script>
 </body>
 </html>
